[build-system]
requires = ["setuptools>=42.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "space-srt"
version = "0.2.0"
authors = [
  { name="Yuzhe Li", email="liyuzhezju@gmail.com" },
]
description = "SPatial transcriptomics Analysis via Cell Embedding"
readme = "README.md"
requires-python = ">3.6.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
]

[project.urls]
"Homepage" = "https://github.com/ericli0419/SPACE"
"Bug Tracker" = "https://github.com/ericli0419/SPACE/issues"